Fixed all lint issues in Wi2MeCore And correction in progress in Wi2MeU